--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <html>
   <head>
-    <link href="./css/index.css" rel="stylesheet" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script src="./js/lifeCounter.js" type="text/javascript"></script>
-    <!-- Latest compiled and minified CSS -->
+
+    <link href="./css/index.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- jQuery library -->
+
+    <script src="./js/lifeCounter.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>Magical Project</title>
   </head>
   <body>
     <div id="container">
-      <img src="./img/ravnica2.jpg" alt="">
-      <div class="left">
-        <label id="YourName">Your Life</label>
-        <div id="YourLife">
-          <div id="YourUp">▲</div>
-          <div id="YourCount">20</div>
-          <div id="YourDown">▼</div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="left">
+            <label id="YourName">Your Life</label>
+            <div id="YourLife">
+              <div id="YourUp">▲</div>
+              <div id="YourCount">20</div>
+              <div id="YourDown">▼</div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="right">
-        <label id="EnemyName">Versus</label>
-        <div id="EnemyLife">
-          <div id="EnemyUp">▲</div>
-          <div id="EnemyCount">20</div>
-          <div id="EnemyDown">▼</div>
+        <div class="col-md-3">
+          <div class="right">
+            <label id="EnemyName">Versus</label>
+            <div id="EnemyLife">
+              <div id="EnemyUp">▲</div>
+              <div id="EnemyCount">20</div>
+              <div id="EnemyDown">▼</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
