images and column sizing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col">
           <div class="left">
             <label id="YourName">Your Life</label>
             <div id="YourLife">
@@ -23,7 +23,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col">
           <div class="right">
             <label id="EnemyName">Versus</label>
             <div id="EnemyLife">
@@ -35,7 +35,5 @@
         </div>
       </div>
     </div>
-    <div id="reset">↺</div>
-    <div id="commander">✩</div>
   </body>
 </html>
