--- a/index.html
+++ b/index.html
@@ -8,30 +8,17 @@
     <script src="./js/lifeCounter.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <title>Magical Project</title>
   </head>
   <body>
-    <div id="container">
+    <div class="container">
       <div class="row">
         <div class="col">
-          <div class="left">
-            <label id="YourName">Your Life</label>
-            <div id="YourLife">
-              <div id="YourUp">▲</div>
-              <div id="YourCount">20</div>
-              <div id="YourDown">▼</div>
-            </div>
-          </div>
+          20
         </div>
         <div class="col">
-          <div class="right">
-            <label id="EnemyName">Versus</label>
-            <div id="EnemyLife">
-              <div id="EnemyUp">▲</div>
-              <div id="EnemyCount">20</div>
-              <div id="EnemyDown">▼</div>
-            </div>
-          </div>
+          20
         </div>
       </div>
     </div>
