--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Magical Project</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col">
-          20
+        <div class="col-auto">
+          <div class="life">20</div>
         </div>
-        <div class="col">
-          20
+        <div class="col-auto">
+          <div class="life">20</div>
       </div>
     </div>
   </body>
