--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="./css/index.css" rel="stylesheet" type="text/css">
-    <script src="./js/lifeCounter.js" type="text/javascript"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/lifeCounter.js" type="text/javascript"></script>
 
     <title>Magical Project</title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-auto">
+        <div class="col-auto" id="player1">
           <div class="life">20</div>
         </div>
-        <div class="col-auto">
+        <div class="col-auto" id="player2">
           <div class="life">20</div>
       </div>
     </div>
