--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-auto" id="player1">
-          <div class="life">20</div>
+          <div class="life">
+            20
+            <p>I'MA;DKGHA;DGKAJDSG;AKSDHG<span class="glyphicon glyphicon-plus"></span></p>
+          </div>
         </div>
         <div class="col-auto" id="player2">
           <div class="life">20</div>
