--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <div class="row">
         <div class="col-auto" id="player1">
           <div class="life">
-            20
-            <p>I'MA;DKGHA;DGKAJDSG;AKSDHG<span class="glyphicon glyphicon-plus"></span></p>
+            20<br>
+            <image src="./img/addIcon.png"></image>
+            <image src="./img/minusIcon.png"></image>
           </div>
         </div>
         <div class="col-auto" id="player2">
