html and css enhancements

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-auto" id="player1">
-          <div class="life">
-            20<br>
-            <image src="./img/addIcon.png"></image>
-            <image src="./img/minusIcon.png"></image>
+          <div class="life">20</div>
+          <div class="lifeBar">
+            <image src="./img/addIcon.png" onClick="addClickPlayer1()"></image>
+            <textarea></textarea>
+            <image src="./img/minusIcon.png" onClick="minusClickPlayer1()"></image>
           </div>
         </div>
         <div class="col-auto" id="player2">
