default to amount

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="life">20</div>
           <div class="lifeBar">
             <image src="./img/addIcon.png" onClick="addClickPlayer1()"></image>
-            <textarea></textarea>
+            <textarea id="player1Amount">1</textarea>
             <image src="./img/minusIcon.png" onClick="minusClickPlayer1()"></image>
           </div>
         </div>
