js for add and minus

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-auto" id="player1">
-          <div class="life">20</div>
+          <div class="life" id="player1LifeTotal">
+            20
+          </div>
           <div class="lifeBar">
             <image src="./img/addIcon.png" onClick="addClickPlayer1()"></image>
             <textarea id="player1Amount">1</textarea>
