text area to input of type number

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </div>
           <div class="lifeBar">
             <image src="./img/addIcon.png" onClick="addClickPlayer1()"></image>
-            <textarea id="player1Amount">1</textarea>
+            <input id="player1Amount" type="number" value="1">
             <image src="./img/minusIcon.png" onClick="minusClickPlayer1()"></image>
           </div>
         </div>
