--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             20
           </div>
           <div class="lifeBar">
-            <image src="./img/addIcon.png" onClick="addClickPlayer1()"></image>
+            <image src="./img/addIcon.png" onClick="addLife('player1Amount', 'player1LifeTotal')"></image>
             <input id="player1Amount" type="number" value="1">
-            <image src="./img/minusIcon.png" onClick="minusClickPlayer1()"></image>
+            <image src="./img/minusIcon.png" onClick="minusLife('player1Amount', 'player1LifeTotal')"></image>
           </div>
         </div>
         <div class="col-auto" id="player2">
