--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
     <div class="container-fluid">
       <div class="row">
+        <div class="reset">
+          <image src="./img/resetIcon.png"></image>
+        </div>
         <div class="col-auto" id="player1">
           <div class="life" id="player1LifeTotal">
             20
