--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="reset">
-          <image src="./img/resetIcon.png"></image>
-        </div>
         <div class="col-auto" id="player1">
           <div class="life" id="player1LifeTotal">
             20
@@ -22,6 +19,7 @@
             <image src="./img/addIcon.png" onClick="addLife('player1Amount', 'player1LifeTotal')"></image>
             <input id="player1Amount" type="number" value="1">
             <image src="./img/minusIcon.png" onClick="minusLife('player1Amount', 'player1LifeTotal')"></image>
+            <image src="./img/resetIcon.png" onclick=""></image>
           </div>
         </div>
         <div class="col-auto" id="player2">
