--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <image src="./img/addIcon.png" onClick="addLife('player1Amount', 'player1LifeTotal')"></image>
             <input id="player1Amount" type="number" value="1">
             <image src="./img/minusIcon.png" onClick="minusLife('player1Amount', 'player1LifeTotal')"></image>
-            <image src="./img/resetIcon.png" onclick=""></image>
+            <image src="./img/resetIcon.png" onclick="resetLife('player1LifeTotal')"></image>
           </div>
         </div>
         <div class="col-auto" id="player2">
