--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-auto" id="player1">
+        <div class="col-auto player" id="player1">
           <div class="life" id="player1LifeTotal">
             20
           </div>
           <div class="lifeBar">
             <image src="./img/addIcon.png" onClick="addLife('player1Amount', 'player1LifeTotal')"></image>
-            <input id="player1Amount" type="number" value="1">
+            <input id="player1Amount" type="number" value="1"></input>
             <image src="./img/minusIcon.png" onClick="minusLife('player1Amount', 'player1LifeTotal')"></image>
             <image src="./img/resetIcon.png" onclick="resetLife('player1LifeTotal')"></image>
           </div>
         </div>
-        <div class="col-auto" id="player2">
+        <div class="col-auto player" id="player2">
           <div class="life">20</div>
+        </div>
+        <div class="col-auto player" id="player3">
+          <div class="life">20</div>
+        </div>
       </div>
     </div>
   </body>
