--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-auto player" id="player1">
+        <div class="col player" id="player1">
           <div class="life" id="player1LifeTotal">
             20
           </div>
@@ -22,11 +22,30 @@
             <image src="./img/resetIcon.png" onclick="resetLife('player1LifeTotal')"></image>
           </div>
         </div>
-        <div class="col-auto player" id="player2">
-          <div class="life">20</div>
+        <div class="col player" id="player2">
+          <div class="life">
+            20
+          </div>
         </div>
-        <div class="col-auto player" id="player3">
-          <div class="life">20</div>
+        <div class="col player" id="player3">
+          <div class="life">
+            20
+          </div>
+        </div>
+        <div class="col player" id="player4">
+          <div class="life">
+            20
+          </div>
+        </div>
+        <div class="col player" id="player5">
+          <div class="life">
+            20
+          </div>
+        </div>
+        <div class="col player" id="player6">
+          <div class="life">
+            20
+          </div>
         </div>
       </div>
     </div>
